EditorController: Fix scale command call
Use multiplication instead of addition/subtraction to change the scale.
Add a digit to the scale display.

--- a/app/ui/button_bar.ui
+++ b/app/ui/button_bar.ui
@@ -274,6 +274,9 @@
          <property name="buttonSymbols">
           <enum>QAbstractSpinBox::NoButtons</enum>
          </property>
+         <property name="decimals">
+          <number>3</number>
+         </property>
          <property name="minimum">
           <double>0.100000000000000</double>
          </property>
