--- a/app/ui/button_bar.ui
+++ b/app/ui/button_bar.ui
@@ -159,7 +159,7 @@
           <set>Qt::AlignCenter</set>
          </property>
          <property name="readOnly">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <property name="buttonSymbols">
           <enum>QAbstractSpinBox::NoButtons</enum>
@@ -269,7 +269,7 @@
           <set>Qt::AlignCenter</set>
          </property>
          <property name="readOnly">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <property name="buttonSymbols">
           <enum>QAbstractSpinBox::NoButtons</enum>
@@ -278,7 +278,7 @@
           <number>3</number>
          </property>
          <property name="minimum">
-          <double>0.100000000000000</double>
+          <double>0.010000000000000</double>
          </property>
          <property name="maximum">
           <double>10.000000000000000</double>
@@ -473,7 +473,7 @@
           <set>Qt::AlignCenter</set>
          </property>
          <property name="readOnly">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <property name="buttonSymbols">
           <enum>QAbstractSpinBox::NoButtons</enum>
